--- a/XamarinApis/XamarinApis/View/DoctoresView.xaml
+++ b/XamarinApis/XamarinApis/View/DoctoresView.xaml
@@ -7,13 +7,11 @@
              >
     <ContentPage.Content>
         <StackLayout x:Name="steckdoctores" BindingContext="{Binding Source={x:Static local:App.ServiceLocator}, Path=DoctoresViewModel}">
-            <!--<StackLayout.BindingContext>
-                <viewmodels:DoctoresViewModel/>
-            </StackLayout.BindingContext>-->
             <Label Text="Doctores" TextColor="Red"
                VerticalOptions="Start"
                    HorizontalOptions="CenterAndExpand"
                    />
+            <Button Text="Mostrar Favoritos" Command="{Binding MostrarFavoritos}"/>
             <ListView ItemsSource="{Binding Doctores}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
